--- a/style.css
+++ b/style.css
@@ -1,28 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
+    font-family: poppins;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 main{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background:linear-gradient(135deg,#153677,#4e085f);
+}
+h1 {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
 }
 .container{
+    padding: 1rem;
     width: 800px;
     border-radius: 1rem;
     height: 500px;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
 }
 .search-bar input{
-    font-size: x-large;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    flex: 1; 
+    /* doubt */
+    background: transparent;
+    padding: 10px;
+    
 }
 .search-bar button{
-    font-size: x-large;
-    font-weight: bold;
-    width: 10rem;
+    border: none;
+    outline: none;
+    background: #ff5945;
+    padding: 16px 50px;
+    border-radius: 40px;
+    color: #fff;
+    font-size: 1rem;
+    cursor: pointer;
 }
-.search-bar{
+.search-bar {
     display: flex;
-    justify-content:space-around;
-
+    justify-content: space-between;
+    background: #edeef0;
+    align-items: center;
+    border-radius: 30px;
+    padding-left: 20px;
 }
+
 .strikeoff{
     text-decoration: line-through;
+}
+.individual-task{
+    display: flex;
+    margin: 1rem;
+    border-radius: 1rem;
+    justify-content:space-between;
+    align-items: center;
+    background-color: aqua;
+    padding: 10px;
+}
+.task-container{
+    overflow-y: scroll;
+    max-height:330px;
+    margin-top:1rem;
+}
+.delete-btn{
+    height: 2.5rem;
+    border-radius: 1rem;
 }
