--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ h1 {
     width: 800px;
     border-radius: 1rem;
     height: 500px;
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -66,15 +65,23 @@ h1 {
     border-radius: 1rem;
     justify-content:space-between;
     align-items: center;
-    background-color: aqua;
+    box-shadow: 0px 0px 8px;
     padding: 10px;
+    cursor: pointer;
 }
 .task-container{
     overflow-y: scroll;
+    min-height: 330px;
     max-height:330px;
     margin-top:1rem;
 }
 .delete-btn{
-    height: 2.5rem;
-    border-radius: 1rem;
-}
+        background: #ff5945;
+        border: none;
+        color: white;
+        outline: none;
+        border-radius: 20px;
+        font-size: 1rem;
+        padding: 8px;
+        cursor: pointer;
+    }
